[FIX] web: fix control panel long breadcrumb
Issue

	- Install CRM and Events
	- Change Azure Interior Name with a
	  very long string
	- Click on "1 Events" smart button

	The view is shifted out of the screen

Cause

	In 12.0, the control panel was separated
	with 2 div where width = 50%

	Now they use flex. (they are still 50% width
	by default)

	The long name is hidden by a `overflow:hidden`
	and there is a `text-overflow: ellipsis` to
	avoid extra-width issue.

	The problem is that there is a `white-space:
	no-wrap;` which force an extra width and
	this cause the shifting.

Solution

	We come back to the 50% even if there is no search view.
	Breadcrumb will always be on the top left area of the screen
	which simplifies the code and avoid jumping left to right
	(taking all the width of the screen) which can be disturbing
	for users.

Original PR: https://github.com/odoo/odoo/pull/47190
closes #47063

OPW-2210786

closes odoo/enterprise#9219

X-original-commit: c7bb98664b82c28c9817a31105316077e99b58e9
Related: odoo/odoo#47603

--- a/web_enterprise/static/src/scss/control_panel_layout.scss
+++ b/web_enterprise/static/src/scss/control_panel_layout.scss
@@ -19,8 +19,8 @@
         padding-right: 0;
 
         .breadcrumb  {
+            width: 100%;
             overflow: hidden;
-            white-space: nowrap;
 
             > li {
                 &:before {
@@ -49,13 +49,12 @@
         }
 
         .o_cp_searchview {
-            flex: 1 1 auto;
             min-height: 35px;
-            text-align: right;
 
             &.o_searchview_quick {
                 display: flex;
                 align-items: flex-start;
+                width: 100%;
 
                 > .o_searchview {
                     display: flex;
@@ -74,7 +73,6 @@
         }
 
         .o_cp_left, .o_cp_right {
-            width: auto; // override desktop rule width: 50%
             flex: 1 1 auto;
         }
 
